@@ -4,7 +4,7 @@ use strict;
 use warnings;
 
 use base 'Exporter';
-our @EXPORT_OK = qw/can_compile_loadable_object/;
+our @EXPORT_OK = qw/can_compile_loadable_object can_compile_static_library can_compile_extension/;
 our %EXPORT_TAGS = (all => \@EXPORT_OK);
 
 use Config;
@@ -153,6 +153,57 @@ sub can_compile_loadable_object {
 	}
 }
 
+sub can_compile_static_library {
+	my %args = @_;
+
+	my $output = $args{output} || \*STDOUT;
+
+	my $config = $args{config} || 'ExtUtils::HasCompiler::Config';
+
+	my ($source_handle, $source_name) = tempfile('TESTXXXX', DIR => $tempdir, SUFFIX => '.c', UNLINK => 1);
+	my $basename = basename($source_name, '.c');
+	my $abs_basename = catfile($tempdir, $basename);
+
+	my ($cc, $ccflags, $optimize, $ar, $full_ar, $ranlib, $archlibexp, $_o, $lib_ext) = map { $config->get($_) } qw/cc ccflags optimize ar full_ar ranlib archlibexp _o lib_ext/;
+	my $incdir = catdir($archlibexp, 'CORE');
+	my $object_file = "$abs_basename$_o";
+	my $static_library = $abs_basename.$lib_ext;
+
+	my @commands;
+	if ($^O eq 'VMS') {
+		return;
+	}
+	elsif ($^O eq 'MSWin32' && $cc =~ /^cl/) {
+		my $my_ar = $ar || 'lib';
+		push @commands, qq{$cc $ccflags $optimize /I "$incdir" /c $source_name /Fo$object_file};
+		push @commands, qq{$my_ar /out:$static_library $object_file};
+	}
+	else {
+		my $my_ar = defined $full_ar ? $full_ar : $ar;
+		push @commands, qq{$cc $ccflags $optimize "-I$incdir" -c $source_name -o $object_file};
+		push @commands, qq{$my_ar cr $static_library $object_file};
+		push @commands, qq{$ranlib $static_library} if $ranlib ne ':';
+	}
+
+	my $shortname = '_Loadable' . $counter++;
+	my $package = "ExtUtils::HasCompiler::$shortname";
+	printf $source_handle $loadable_object_format, $basename, $package or do { carp "Couldn't write to $source_name: $!"; return };
+	close $source_handle or do { carp "Couldn't close $source_name: $!"; return };
+
+	for my $command (@commands) {
+		print $output "$command\n" if not $args{quiet};
+		system $command and do { carp "Couldn't execute $command: $!"; return };
+	}
+	return 1;
+}
+
+sub can_compile_extension {
+	my %args = @_;
+	$args{config} ||= 'ExtUtils::HasCompiler::Config';
+	my $linktype = $args{linktype} || ($args{config}->get('usedl') ? 'dynamic' : 'static');
+	return $linktype eq 'static' ? can_compile_static_library(%args) : can_compile_loadable_object(%args);
+}
+
 sub ExtUtils::HasCompiler::Config::get {
 	my (undef, $key) = @_;
 	return $ENV{uc $key} || $Config{$key};
@@ -161,6 +212,16 @@ sub ExtUtils::HasCompiler::Config::get {
 1;
 
 # ABSTRACT: Check for the presence of a compiler
+
+=head1 SYNOPSIS
+
+ use ExtUtils::HasCompiler 'can_compile_extension';
+ if (can_compile_extension()) {
+   ...
+ }
+ else {
+   ...
+ }
 
 =head1 DESCRIPTION
 
@@ -185,5 +246,33 @@ An L<ExtUtils::Config|ExtUtils::Config> (compatible) object for configuration.
 =item * skip_load
 
 This causes can_compile_loadable_object to not try to load the generated object. This defaults to true on a cross-compiling perl.
+
+=back
+
+=func can_compile_static_library(%opts)
+
+This checks if the system can compile and link a perl static library. It does not check it it can compile a new perl with it. It may take the following options:
+
+=over 4
+
+=item * quiet
+
+Do not output the executed compilation commands.
+
+=item * config
+
+An L<ExtUtils::Config|ExtUtils::Config> (compatible) object for configuration.
+
+=func can_compile_extension(%opts)
+
+This will call either C<can_compile_loadable_object>, or C<can_compile_static_library>, depending on which is the default on your configuration. In addition to the arguments listed above, it can take one more optional argument:
+
+=over 4
+
+=item * linktype
+
+This will force the linktype to be either static or dynamic. Dynamic compilation on a static perl won't work, but static libraries can be viable on a dynamic perl.
+
+=back
 
 =back
